fix modal z-index value

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -258,7 +258,7 @@ div.logout-btn2 {
 .modal {
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
-    z-index: 2; /* Sit on top */
+    z-index: 4; /* Sit on top */
     left: 0;
     top: 0;
     width: 100%; /* Full width */
